Added simple levelling system. Unlikely to stay that way in actual development.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             Exp: <span id = "exp">0</span>
             
         </div>
+        <script type="text/javascript" src="main.js"></script>
 
     </body>
 </html>
